# Chest-X-Ray-Disease-Classifier

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  README.md  REFRESH_SUMMARY.md  app.py  debug_model.py  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tests.yml
.streamlit/: config.toml  secrets.example.toml
Chest-X-Ray-Disease-Classifier/: app.py  config.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  TRAINING.md
src/: app.py
tests/: __init__.py  test_app.py  test_model.py
